--- a/taleof2ditas.dita
+++ b/taleof2ditas.dita
@@ -3,6 +3,47 @@
 <topic id="topic_dsg_1zx_knb">
     <title>Tale of Two DITAs</title>
     <body>
+        <p>
+            <pre id="pre_nl3_n1f_2qb">JoAnn T, Hackos. 
+Content Management for Dynamic Web Delivery
+Wiley
+2001 New York
+
+P. 124f
+An Information Model is an organizational framework that you use to categorize your information resources. . . . An Information Model might encompass the inormation resources of one part of an organization. 
+
+P 185
+People prefer to read technical information in small, self-contained chunks, called modules. Modules are self-contained units of information that a customer can understand by themsleves, without reference to other information. A modular design accommodates those who want to move quickly to a topic they need and easily find related topics.
+
+P 194f
+Embodied in the architectures
+These principles [topic orientation, information typing, specialization, inheritable processes] are embodied in two architectures.
+Information architecture
+The information architecture desires what a topic is and what the three core information types are (concept, procedure, and reference).  . . . 
+Specialization architecture
+The specialization architecture describes how new information types of topic are derived from more general types of a topic, and how specialization-aware processes can access topics at whatever level of specialization they require. 
+
+P. 200
+The content units provide a standard structure inside each information type. . . . The user’s task of finding discrete pieces of information is still enhanced by the way the content units are organized and labeled. </pre>
+        </p>
+        <p>
+            <pre id="pre_avf_l1f_2qb">Don Day, Erik Hennum, John Hunt, Michael Priestley, David Schell
+
+An XML Architecure for Technical Documentation: The Darwin Information Typing Architecture
+
+Retrieved on 10-15-2020 from . . . 
+
+Abstract
+DITA is an architecture fo creating topic-oriented, Information-typed content that can be reused and single-sorted in a variety of ways. It is also an architecture for creating new information types and describing new information domains, allowing groups to create very specific, targeted documentation type definitions using a process called specialization, while at the same time reusing common output transforms and design rules. 
+
+Specialization   . . . applies the well-established principles of inheritance and polymorphism from object-oriented design and applies them to the world of information design. This lets you create new deigns by specializing existing design. At the end of it, you get a customized solution that is still compatible with the existing infrastructure. 
+
+Roles and responsibilities include - type architect, topic writer, information architect, build developer, and information designer.
+
+SJD: Relatively high table stakes to do the OOTB work. Extending or specializing adds more overhead. 
+SJD: This investment was still significantly less expensive than continuing to work on DocBook. BUT — is specialized DITA that much more powerful than OOTB DITA. 
+</pre>
+        </p>
         <p></p>
         <codeblock>
             <coderef href="txt_tale2ditas.txt"/>
