--- a/audience-roles.dita
+++ b/audience-roles.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="topic_hx5_54m_v4b">
-    <title>Audience</title>
+    <title>Listening sessions</title>
     <body>
         <section id="section_xsm_qhy_bqb">
             <title>What are we hearing?</title>
