--- a/rootmap_ootb.ditamap
+++ b/rootmap_ootb.ditamap
@@ -2,12 +2,17 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
     <title></title>
-    <topicref href="dita-audience.dita"/>
-    <topicref href="ShowMeTheMoney.dita"/>
-    <topicref href="boundaries.dita"/>
-    <topicref href="audience-roles.dita"/>
-    <topicref href="taleof2ditas.dita"/>
-    <topicref href="fromgoodstock.dita"/>
-    <topicref href="myths.dita"/>
-    <topicref href="outline.dita"/>
+    <topicref href="dita-audience.dita">
+        <topicref href="ShowMeTheMoney.dita"/>
+        <topicref href="boundaries.dita"/>
+        <topicref href="less-is-more.dita"/>
+        <topicref href="governance.dita"/>
+        <topicref href="audience-roles.dita"/>
+        <topicref href="formulaic-writing.dita"/>
+        <topicref href="taleof2ditas.dita"/>
+        <topicref href="fromgoodstock.dita"/>
+        <topicref href="myths.dita"/>
+        <topicref href="outline.dita"/>
+        <topicref href="appendix_samples_intro.dita"/>
+    </topicref>
 </map>
