--- a/ShowMeTheMoney.dita
+++ b/ShowMeTheMoney.dita
@@ -10,13 +10,14 @@
             to impress, typically they respond:</p>
         <ul id="ul_qg3_g5n_qqb">
             <li>
-                <p>Professional writers have absorbed </p>
+                <p>Professional writers have internalized the craft </p>
             </li>
             <li>
-                <p>Professional writers are members of a culture </p>
+                <p>Professional writers are members of a group that produces successful doc </p>
             </li>
             <li>
-                <p>Professional writers develop content that reflects the best practices </p>
+                <p>Professional writers develop content that reflects the best practices of an
+                    industry</p>
             </li>
             <li>
                 <p>Professional writers have appropriate degrees from institutions of higher
@@ -29,8 +30,13 @@
                 <p/>
             </li>
         </ul>
-        <p>Professional technical writers are paid by one or more employers to perform specific
-            tasks. </p>
+        <p>The punchline back to the students is prosaic, but simple. Professional technical writers
+            are paid by one or more employers to add value to some product or service. The good news
+            is that DITA can be a strong performer in the area of adding value. More than other
+            authoring frameworks I have used, you can quickly identify and deploy those features and
+            capabilities in DITA that enhance business value. The challenge is differentiating the
+            ones which almost always add value from the ones which are esoteric, useless, or
+            boutiquey.   </p>
         <p>"No man but a blockhead ever wrote, except for money."<i>Boswell: Life</i></p>
         <p>"I would say to Robertson what an old tutor of a college said to one of his pupils:'Read
             over your compositions, and where ever you meet with a passage which you think is
