--- a/less-is-more.dita
+++ b/less-is-more.dita
@@ -57,5 +57,9 @@
                     <i>everyone</i> learn a new reuse method and follow another governance workflow.
             </p>
         </section>
+        <section id="section_wcm_cnr_5qb">
+            <title>Thousand duck bites</title>
+            <p/>
+        </section>
     </body>
 </topic>
