--- a/rootmap_ootb.ditamap
+++ b/rootmap_ootb.ditamap
@@ -12,6 +12,7 @@
         <topicref href="laws-of-dita.dita"/>
         <topicref href="scalability.dita"/>
         <topicref href="happiness.dita"/>
+        <topicref href="people-stuff.dita"/>
         <topicref href="top10_intro.dita"/>
         <topicref href="audience-roles.dita"/>
         <topicref href="formulaic-writing.dita"/>
