--- a/laws-of-dita.dita
+++ b/laws-of-dita.dita
@@ -19,13 +19,14 @@
             variations – did respect three operational laws or principles.  </p>
         <section id="section_g3r_qgr_5qb">
             <title>The Pareto Principle</title>
-            <p>80% of the effects come from 20% of the causes</p>
+            <p>80% of the effects come from 20% of the causes, benefits and costs</p>
             <p>++ The top-10 DITA basics</p>
             <p>– - The top-5 DITA screw-ups</p>
         </section>
         <section id="section_o2n_rgr_5qb">
             <title>Murphy's Law</title>
-            <p/>
+            <p>Solving complex content development and publishing challenges requires complex
+                solutions. No failure-free path through this stuff. Anticipate it. </p>
         </section>
         <section id="section_gg1_sgr_5qb">
             <title>Beaker's Law</title>
@@ -36,7 +37,7 @@
                 included the Electronic Pet Converter, the Nuclear-powered Shaver, Edible
                 Paperclips, and the Banana Sharpener. As each lab experiment devolves into
                 confusion, chaos, and cataclysm, Beaker becomes increasingly agitated and panicky.
-                Yet he seems incapable of challenging Dr. Honeydew and the logic of his experiment. </p>
+                Yet he seems incapable of challenging Dr. Honeydew and the logic of his experiments. </p>
             <p>Some people who sell DITA have equivalent banana sharpeners, wildly unrealistic
                 expectations or assumptions. You cannot prevent these unrealistic goals from being
                 brought up as rationalizations for adopting DITA – they're out there. But you can
