--- a/rootmap_ootb.ditamap
+++ b/rootmap_ootb.ditamap
@@ -2,7 +2,8 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
     <title></title>
-    <topicref href="dita-audience.dita">
+    <topicref href="intro_01.dita">
+        <topicref href="dita-audience.dita"/>
         <topicref href="ShowMeTheMoney.dita"/>
         <topicref href="boundaries.dita"/>
         <topicref href="less-is-more.dita"/>
